--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Jing Chen"
 title_separator          : "-"
 name                     : &name "Jing Chen"
 description              : &description "One who is intrested in anything new."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://celeste-cj.github.io"
+url                      : "https://celeste-cj.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "celeste-cj.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
